# hermes

./: .pre-commit-config.yaml  Dockerfile  LICENSE  noxfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: attest-reusable.yaml  dependency-review.yaml  docs.yaml  image-build-push.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/: .readthedocs.yaml  conf.py
src/hermes/: client.py  files.py  parser.py
